CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(rscript)

#SET(EXECUTABLE_OUTPUT_PATH ${RBASE_BINARY_ROOT}) 

INCLUDE_DIRECTORIES(
    include
)

SET(SRC_LIB
    src/rscript_lua.c
)

SET(SRC_LIB_3RD
    src/profiler_lua.c
)

SET(SRC_BIN
    ${SRC_LIB}
    ${SRC_LIB_3RD}
    test/rtest.c
    test/rtest_rscript_lua.c
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_LIB})
ADD_LIBRARY(rprofiler SHARED ${SRC_LIB_3RD})

#SET(LIBRARY_OUTPUT_PATH ${RBASE_LIB_ROOT}) 

MESSAGE(STATUS "Platform: ${CMAKE_HOST_SYSTEM_NAME} - ${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE(STATUS "Link libs (${PROJECT_NAME}): ${LINK_LIBS}")
MESSAGE(STATUS "Link opts (${PROJECT_NAME}): ${PROJECT_LINK_OPTIONS}")

IF(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
    SET(LINK_TEST_LIBS ${LINK_LIBS} 3rd/cmockad)
ELSE()
    SET(LINK_TEST_LIBS ${LINK_LIBS} libcmockad.so)
ENDIF()

MESSAGE(STATUS "Platform: ${CMAKE_HOST_SYSTEM_NAME} - ${CMAKE_CURRENT_SOURCE_DIR}")

IF(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
    ADD_EXECUTABLE(${PROJECT_NAME}_test ${SRC_BIN})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME}_test ${LINK_TEST_LIBS})
    TARGET_LINK_LIBRARIES(rprofiler ${LINK_TEST_LIBS})
ELSE()
    ADD_EXECUTABLE(${PROJECT_NAME}_test${RBUILD_TYPE_POSTFIX} ${SRC_BIN})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME}_test${RBUILD_TYPE_POSTFIX} ${LINK_TEST_LIBS})
    TARGET_LINK_LIBRARIES(rprofiler ${LINK_TEST_LIBS})
ENDIF()

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

