CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(commonsvr)

#AUX_SOURCE_DIRECTORY(src SRC_LIB)
SET(SRC_LIB
    src/rtest.c
    )

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_LIB})
#ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_LIB})

MESSAGE(STATUS "Platform: ${CMAKE_HOST_SYSTEM_NAME} - ${CMAKE_CURRENT_SOURCE_DIR}")
