CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(funrasvr)

INCLUDE_DIRECTORIES(include)

SET(SRC_BIN
    src/main.c
    )

MESSAGE(STATUS "Platform: ${CMAKE_HOST_SYSTEM_NAME} - ${CMAKE_CURRENT_SOURCE_DIR}")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_BIN})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LINK_LIBS})