CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(funrasvr)

INCLUDE_DIRECTORIES(
    include
)

SET(SRC_BIN
    src/main.c
    )

MESSAGE(STATUS "Platform: ${CMAKE_HOST_SYSTEM_NAME} - ${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE(STATUS "Link dirs (${PROJECT_NAME}): ${RSERVER_LIB_ROOT}")
MESSAGE(STATUS "Link libs (${PROJECT_NAME}): ${LINK_LIBS}")
MESSAGE(STATUS "Link opts (${PROJECT_NAME}): ${PROJECT_LINK_OPTIONS}")

ADD_EXECUTABLE(${PROJECT_NAME}${RBUILD_TYPE_POSTFIX} ${SRC_BIN})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}${RBUILD_TYPE_POSTFIX} ${LINK_LIBS})